LPF-1357: Set up gatling tests